Fix logo spacing and make trash can link to www.potholepress.com

--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ img{
     display: block;
     margin-left: auto;
     margin-right: auto;
-    width: 30%;
+    width: 35%;
 }
 
 .happy{
@@ -24,6 +24,7 @@ img{
     width: 20%;
     margin-left: auto;
     margin-right: auto;
+    padding: 50px;
 }
 
 .pothole{
@@ -31,6 +32,7 @@ img{
     width: 15%;
     margin-left: auto;
     margin-right: auto;
+    padding: 50px;
 }
 
 .pub{
@@ -38,6 +40,7 @@ img{
     width: 5%;
     margin-left: auto;
     margin-right: auto;
+    padding: 50px;
 }
 
 div{
